write second tests, fail

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-*/PierreVandO.Tests/bin/
-*/PierreVandO.Tests/obj/
-*/PierreVandO/bin/
-*/PierreVandO/obj/
+/PierreVandO.Tests/bin/
+/PierreVandO.Tests/obj/
+/PierreVandO/bin/
+/PierreVandO/obj/
 .vscode
